# PRodder

./: Cargo.toml  Dockerfile  LICENSE-MIT  README.md  codecov.yml  container_checks.sh  deny.toml  deploy_to_scaleway.sh  flake.nix  prodder.example.toml  rust-toolchain.toml  tarpaulin.toml  vector.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  container.yml
benches/: config_bench.rs
scripts/: smoke.sh
src/: config.rs  drafter.rs  lib.rs  main.rs  wasm.rs
tests/: config_schema.rs
