[package]
name = "prodder"
version = "0.1.0"
edition = "2024"
description = "Automatically manages GitHub PR draft status and branch updates based on CI state"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DominicBurkart/PRodder"
readme = "README.md"
keywords = ["github", "pull-request", "ci", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.96"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

# `cfg(tarpaulin)` is set by cargo-tarpaulin when it instruments the
# crate. Registering it here with `check-cfg` silences the unexpected
# `cfg` lint that is on by default under `-W clippy::pedantic`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(tarpaulin)',
    'cfg(tarpaulin_include)',
] }
