[package]
name = "prodder"
version = "0.1.0"
edition = "2024"
description = "Automatically manages GitHub PR draft status and branch updates based on CI state"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DominicBurkart/PRodder"
readme = "README.md"
keywords = ["github", "pull-request", "ci", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.96"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = { version = "0.3" }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
