[package]
name = "prodder"
version = "0.1.0"
edition = "2024"
description = "Automatically manages GitHub PR draft status and branch updates based on CI state"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DominicBurkart/PRodder"
readme = "README.md"
keywords = ["github", "pull-request", "ci", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.96"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
